Added missing speaker images, video, and updated home.html

--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -1,5 +1,6 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
+<link rel="stylesheet" href="{% static 'events/style.css' %}">
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -641,5 +642,6 @@
       © 2025 Powered by Framer With <span style="color:#00f">❤</span>
     </div>
   </footer>
+
 </body>
 </html>
