Renamed duplicate image files

--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -16,12 +16,12 @@
 <ul>
   <li><a href="#home">Home</a></li>
   <li><a href="#pages">Pages</a></li>
-  <li><a href="#aboutus">About us</a></li>
+  <li><a href="#aboutus">Aboutus</a></li>
   <li><a href="#organisers">Organisers</a></li>
   <li><a href="#speakers">Speakers</a></li>
 </ul>
 <button class="nav-cta">
-  <a href="#contact" style="color:inherit;text-decoration:none;">Contact Us</a>
+  <a href="#contact" style="color:inherit;text-decoration:none;">ContactUs</a>
   </button>
   </nav>
   <!-- HERO SECTION -->
@@ -31,11 +31,11 @@
     <source src="{% static 'events/images/home1.mp4' %}" type="video/mp4">
     Your browser does not support the video tag.
   </video>
-  <img class="hero-img hero-img1" src="{% static 'events/images/img1.png' %}">
-  <img class="hero-img hero-img2" src="{% static 'events/images/img2.png' %}">
-  <img class="hero-img hero-img3" src="{% static 'events/images/img3.png' %}">
-  <img class="hero-img hero-img4" src="{% static 'events/images/img4.png' %}">
-  <img class="hero-img hero-img5" src="{% static 'events/images/img5.png' %}">
+  <img class="hero-img hero-img1" src="{% static 'events/images/img1_home.png' %}">
+  <img class="hero-img hero-img2" src="{% static 'events/images/img2.img1_home' %}">
+  <img class="hero-img hero-img3" src="{% static 'events/images/img3_home.png' %}">
+  <img class="hero-img hero-img4" src="{% static 'events/images/img4_home.png' %}">
+  <img class="hero-img hero-img5" src="{% static 'events/images/img5_home.png' %}">
   <div class="hero-content">
     <h1>Join The Online<br /><span class="hero-script">Revolution</style></h1>
     <button class="hero-btn">Buy a Ticket Now</button>
