First commit of Event Management Planner

--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -32,7 +32,7 @@
     Your browser does not support the video tag.
   </video>
   <img class="hero-img hero-img1" src="{% static 'events/images/img1_home.png' %}">
-  <img class="hero-img hero-img2" src="{% static 'events/images/img2.img1_home' %}">
+  <img class="hero-img hero-img2" src="{% static 'events/images/img2.home.png' %}">
   <img class="hero-img hero-img3" src="{% static 'events/images/img3_home.png' %}">
   <img class="hero-img hero-img4" src="{% static 'events/images/img4_home.png' %}">
   <img class="hero-img hero-img5" src="{% static 'events/images/img5_home.png' %}">
@@ -217,7 +217,7 @@
     </div>
     <!-- Card 2 -->
     <div class="event-card">
-      <img class="event-card-img" src="{% static 'events/images/june11(2).jpg' %}" alt="Event 2">
+      <img class="event-card-img" src="{% static 'events/images/june11_b.jpg' %}" alt="Event 2">
       <div class="event-card-content">
         <p class="event-card-title">
           Engage In Thought-Provoking Discussions With Leading
@@ -230,7 +230,7 @@
     </div>
     <!-- Card 3 -->
     <div class="event-card">
-    <img class="event-card-img" src="{% static 'events/images/june11(3).jpg' %}" alt="Event 3">
+    <img class="event-card-img" src="{% static 'events/images/june11_c.jpg' %}" alt="Event 3">
       <div class="event-card-content">
         <p class="event-card-title">
           Learn From The Best In The Field And Stay Ahead Of The Curve With The
@@ -310,7 +310,7 @@
         </div>
       </div>
       <div class="event-card">
-        <img class="event-card-img" src="{% static 'events/images/june14(2).jpg' %}" alt="Event 2">
+        <img class="event-card-img" src="{% static 'events/images/june14_c.jpg' %}" alt="Event 2">
         <div class="event-card-content">
           <p class="event-card-title">
             Our Event Featured Inspiring Keynote Addresses From Industry
@@ -322,7 +322,7 @@
         </div>
       </div>
       <div class="event-card">
-        <img class="event-card-img" src="{% static 'events/images/june14(1).jpg' %}" alt="Event 3">
+        <img class="event-card-img" src="{% static 'events/images/june14_b.jpg' %}" alt="Event 3">
         <div class="event-card-content">
           <p class="event-card-title">
             Attendees Participated In A Series Of Engaging Workshops And Sessions
@@ -360,7 +360,7 @@
     </div>
   </div>
   <div class="speaker-card">
-    <img src="{% static 'events/images/kristin2.avif' %}" alt="Kristin Watson" class="speaker-img-row" />
+    <img src="{% static 'events/images/kristin_b.avif' %}" alt="Kristin Watson" class="speaker-img-row" />
     <div>
       <div class="speaker-name">Kristin Watson</div>
       <div class="speaker-org">Biffco Enterprises Ltd.</div>
@@ -374,7 +374,7 @@
     </div>
   </div>
   <div class="speaker-card">
-    <img src="{% static 'events/images/wade2.avif' %}" alt="Wade Warren" class="speaker-img-row" />
+    <img src="{% static 'events/images/wade_b.avif' %}" alt="Wade Warren" class="speaker-img-row" />
     <div>
       <div class="speaker-name">Wade Warren</div>
       <div class="speaker-org">Big Kahuna Burger Ltd.</div>
